[package]
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
categories = ["database"]
description = "Import sqlite database to mongodb."
edition = "2018"
keywords = ["MongoDB", "Sqlite"]
license = "MIT"
name = "sqlite2mongo"
readme = "README.md"
repository = "https://github.com/J-F-Liu/sqlite2mongo.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.7.0", features = ["attributes"]}
heck = "0.3.1"
mongodb = {version = "1.1.1", default-features = false, features = ["async-std-runtime"]}
sqlx = {version = "0.4.1", features = ["runtime-async-std-native-tls", "chrono", "sqlite"]}
structopt = "0.3.21"
